# procgen

./: .gitignore  .travis.yml  ASSET_LICENSES.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  setup.py
.github/workflows/: main.yml
docker/: Dockerfile  Dockerfile.dev
procgen/: CMakeLists.txt  __init__.py  build.py  builder.py  env.py  env_test.py  gym_registration.py  interactive.py  interactive_base.py  libenv.h  libenv.py  primitive_eval.py  primitive_train.py  scalarize.py  state_test.py
procgen-build/: requirements.txt  setup.py
procgen-build/procgen_build/: build_package.py  build_qt.py  common.py  dev_test.py  key.json.enc
procgen/data/assets/misc_assets/: cheese.textClipping
procgen/examples/: random_agent.py  random_agent_gym.py  random_agent_gym3.py
procgen/src/: _clang-format  assetgen.cpp  assetgen.h  basic-abstract-game.cpp  basic-abstract-game.h  buffer.h  cpp-utils.cpp  cpp-utils.h  entity.cpp  entity.h  game-registry.cpp  game-registry.h  game.cpp  game.h  grid.h  libenv.h  mazegen.cpp  mazegen.h  object-ids.h  qt-utils.h  randgen.cpp  randgen.h  resources.cpp  resources.h  roomgen.cpp  roomgen.h  vecgame.cpp  vecgame.h  vecoptions.cpp  vecoptions.h
procgen/src/games/: bigfish.cpp  bossfight.cpp  bossfight_attack_100.cpp  bossfight_attack_200.cpp  bossfight_attack_400.cpp  bossfight_compositional.cpp  bossfight_move_100.cpp  bossfight_move_200.cpp  bossfight_move_400.cpp  caterpillar.cpp  caveflyer.cpp  chaser.cpp  climber.cpp  coinrun.cpp  coinrun_old.cpp  dodgeball.cpp  fruitbot.cpp  game_factory.h  gemjourney.cpp  heist.cpp  hovercraft.cpp  jumper.cpp  leaper.cpp  maze.cpp  miner.cpp  ninja.cpp  plunder.cpp  safezone.cpp  starpilot.cpp
scripts/: upload_wheels.py
